--- a/scGate.benchmark.Rmd
+++ b/scGate.benchmark.Rmd
@@ -114,18 +114,35 @@ for(dset in dset.to.run){
 # Build SCINA model signatures 
 ```{r}
 scina.signatures <- list()
-scina.signatures$Bcell <- c("MS4A1","BANK1","PAX5","CD19","CD79A") 
-#scina.signatures$Plasma <- c("IGKC","IGHG3","IGHG1","IGHA1","CD79A") 
-scina.signatures$PanBcell <- c("CD79A")
-
-scina.signatures$MoMacDC<- c("SPI1","CD40","CD68","CD14","FCGR1A","LYZ","CSF1R","MSR1","MAFB","CD300E")
-scina.signatures$Myeloid<- c("SPI1","CD40","CD68","CD14","FCGR1A","LYZ","CSF1R","MSR1","MAFB","CD300E","CSF3R","FCGR3B")
-
+scina.signatures$Bcell <- c("PTPRC","LCK","MS4A1","BANK1","PAX5","CD19","CD79A") 
+scina.signatures$Plasma <- c("PTPRC","LCK","IGKC","IGHG3","IGHG1","IGHA1","CD79A") 
+scina.signatures$PanBcell <- c("PTPRC","LCK","CD79A")
+scina.signatures$MoMacDC <- c("PTPRC","SPI1","LYZ","CSF1R","MSR1","MAFB","CD300E")
+scina.signatures$Neutrophils <- c("PTPRC","SPI1","CSF3R","FCGR3B")
+scina.signatures$Myeloid <- c("PTPRC","SPI1")
 scina.signatures$Tcell <- c("CD3D","CD3E","CD3G","CD2")
-
-scina.signatures$CD4T <- c("CD3D","CD3E","CD3G","CD2","CD4","CD40LG","FOXP3")
+scina.signatures$CD4T <- c("CD3D","CD3E","CD3G","CD2","CD4","CD40LG")
 scina.signatures$CD8T <- c("CD3D","CD3E","CD3G","CD2","CD8A","CD8B")
-scina.signatures$NK<- c("LCK","KLRD1","NKG7","NCR1","FCGR3A")
+scina.signatures$Tgammadelta <- c("CD3D","CD3E","CD3G","CD2","TRDC","TRGC1","TRGC2","TRDV1")
+scina.signatures$NK <- c("LCK","KLRD1","NKG7","NCR1","FCGR3A")
+scina.signatures$Epithelial <- c("CDH1","FLT1")
+scina.signatures$Stromal <- c("MMP2","COL1A1","COL1A2","COL5A1","LUM","PDGFRA")
+scina.signatures$Erythrocyte <- c("HBB","HBA2","HBA1")
+```
+
+We cannot simply run SCINA with multiple, conflicting signatures, as the method would be forced to assign to one class or another (e.g. myeloid or MoMacDC). Instead, we need to set up a "model" for each target cell type that avoids conflicts.
+
+```{r}
+scina.model <- list()
+scina.model$Bcell <- scina.signatures[c("Bcell","MoMacDC","Tcell","NK","Epithelial","Stromal","Erythrocyte")]
+scina.model$PanBcell <- scina.signatures[c("PanBcell","MoMacDC","Tcell","NK","Epithelial","Stromal","Erythrocyte")]
+scina.model$Plasma_cell <- scina.signatures[c("Plasma","MoMacDC","Tcell","NK","Epithelial","Stromal","Erythrocyte")]
+scina.model$MoMacDC <- scina.signatures[c("MoMacDC","Bcell","Tcell","NK","Epithelial","Stromal","Erythrocyte")]
+scina.model$Myeloid <- scina.signatures[c("Myeloid","Bcell","Tcell","NK","Epithelial","Stromal","Erythrocyte")]
+scina.model$Tcell <- scina.signatures[c("Tcell","Bcell","MoMacDC","NK","Epithelial","Stromal","Erythrocyte")]
+scina.model$CD4T <- scina.signatures[c("CD4T","Bcell","MoMacDC","CD8T","Tgammadelta","NK","Epithelial","Stromal","Erythrocyte")]
+scina.model$CD8T <- scina.signatures[c("CD8T","Bcell","MoMacDC","CD4T","Tgammadelta","NK","Epithelial","Stromal","Erythrocyte")]
+scina.model$NK <- scina.signatures[c("NK","Bcell","MoMacDC","Tcell","Epithelial","Stromal","Erythrocyte")]
 ```
 
 # Run SCINA
@@ -135,9 +152,12 @@ for(dset in dset.to.run){
   obj <- testing.datasets[[dset]]
   assay <-  DefaultAssay(obj)
   expr.mat <- GetAssayData(object = obj,assay = assay)
-  res.scina <- SCINA(expr.mat,signatures = scina.signatures, max_iter=100,convergence_n=10,convergence_rate=0.99,sensitivity_cutoff=0.9,rm_overlap=F)
+#  res.scina <- SCINA(expr.mat,signatures = scina.signatures, max_iter=100,convergence_n=10,convergence_rate=0.99,sensitivity_cutoff=0.9,rm_overlap=F)
 
   for(model.name in names(models)){
+    
+    res.scina <- SCINA(expr.mat,signatures = scina.model[[model.name]], rm_overlap = F)
+
     pred.SCINA <- (res.scina$cell_labels==model.name) + 0
     res.SCINA <- scGate::performance.metrics(actual = obj@meta.data[,model.name], pred = pred.SCINA == 1)
     res.SCINA <- data.frame(value = res.SCINA, metric = names(res.SCINA),model = model.name,dataset = dset,method = 'SCINA')
