--- a/scGate.benchmark.Rmd
+++ b/scGate.benchmark.Rmd
@@ -65,11 +65,16 @@ dir.create(figure.path)
 # Load pbmc datasets from Abdelaal 2019
 (see processing steps in scGate_dev repo)
 ```{r}
-runing_abdelaal = F
+runing_abdelaal = T
 if(runing_abdelaal){
   testing.datasets <- readRDS(paste0("aux/pbmcs_abdelaal2019.rds"))
   platforms = c("10Xv2","10Xv3","CEL-Seq","Drop-Seq","inDrop","Seq-Well","Smart-Seq2")
+
+keep_pbmc1 <- grep("^pbmc1",names(testing.datasets))
+testing.datasets <- testing.datasets[keep_pbmc1]
+gc()
 }
+
 ```
 
 
@@ -235,6 +240,29 @@ for(dset in dset.to.run){
 }
 ```
 
+```{r}
+results.to.plot <- results%>%subset(method!="Garnett.clust.ext" & metric!= "REC")
+gb = results.to.plot%>%group_by(method,metric)
+global.perf <- summarise(gb,value = mean(value,na.rm =T))%>%arrange(desc(value))
+
+#ordered.methods <- (summarise(gb,value = mean(value,na.rm =T))%>%subset(metric=="MCC")%>%arrange(desc(value)))$method
+ordered.methods <- c("scGate","SingleR","SCINA","Garnett")
+global.perf$method <- factor(global.perf$method, levels = ordered.methods)
+global.perf$metric <- factor(global.perf$metric, levels = c("PREC","REC","MCC"))
+  
+
+colors <- c("#56B4E9","#56E9BA","#E69F00","#E06D55")
+global.plt <- ggplot() +
+  geom_bar(data=global.perf, aes(x=metric, y=value, fill=method), stat="identity", position="dodge", width = 0.75, alpha=0.3) +
+#  geom_jitter(data=global.perf, aes(x=metric, y=value, color = method)) + 
+  scale_color_manual(values=colors) + scale_fill_manual(values=colors) +
+  ylab("Global Performance")   + theme_bw() +
+  theme(axis.text.x = element_text(angle = 60, vjust = 0.4, hjust=0.5)) 
+
+
+global.plt
+
+```
 
 
 
@@ -247,19 +275,21 @@ data_summary <- function(x) {
      ymax <- m+se(x)
      return(c(y=m,ymin=ymin,ymax=ymax))
 }
+
   
-res <- results%>%subset(metric %in% c("PREC","MCC") & model!= "Plasma_cell")
+res <- results.to.plot%>%subset(metric %in% c("PREC","MCC") & model!= "Plasma_cell")
   
   
 res.prec <- res%>%subset(metric == "PREC")
+res.prec$method <- factor(res.prec$method, levels = ordered.methods)
 res.mcc <- res%>%subset(metric == "MCC")
+res.mcc$method <- factor(res.mcc$method, levels = ordered.methods)
+
 ```
 
 
 And visualize performance metrics in one plot
 ```{r}
-colors <- c("#E69F00", "#56B4E9","#56E9BA","#E06D55","#E0D855")
-
 res.prec <- res.prec[!is.na(res.prec$value),]
 res.prec$model <- factor(res.prec$model, levels=c("Bcell","PanBcell","MoMacDC","Myeloid","NK","Tcell","CD4T","CD8T"))   #reorder in more intuitive way
 
@@ -295,7 +325,7 @@ b <- plt.prec / plt.mcc
 
 a
 
-ggsave(file.path(figure.path,"benchmark_19012022_scGate_lands.pdf"), plot=a, width=9, height=4)
+#ggsave(file.path(figure.path,"benchmark_20012022_scGate_lands.pdf"), plot=a, width=9, height=4)
 
 #remove x axis labels
 plt.prec <- plt.prec + theme(axis.title.x=element_blank(),
@@ -305,7 +335,7 @@ plt.prec <- plt.prec + theme(axis.title.x=element_blank(),
 b <- plt.prec / plt.mcc
 b
 
-ggsave(file.path(figure.path,"benchmark_19012022_scGate_portr.pdf"), plot=b, width=6, height=4)
+ggsave(file.path(figure.path,"benchmark_20012022_scGate_portr.pdf"), plot=b, width=6, height=4)
 
 ```
 
