--- a/scGate.benchmark.Rmd
+++ b/scGate.benchmark.Rmd
@@ -54,7 +54,9 @@ if (!file.exists(rds.file)) {
 }
 testing.datasets <- readRDS(rds.file) 
 
-ground_truth_categories <- readRDS("./aux/SingleR_goldStandard.rds")  #Load an object containing stardard cell type annotations - to allow comparing different methods
+#ground_truth_categories <- readRDS("./aux/SingleR_goldStandard.rds")  #Load an object containing stardard cell type annotations - to allow comparing different methods
+
+ground_truth_categories <- readRDS("./aux/goldStandards.rds")  #Load an object containing stardard cell type annotations - to allow comparing different methods
 
 figure.path <- "./plots/"
 dir.create(figure.path, showWarnings = F)
@@ -69,14 +71,14 @@ models.DB <- scGate::get_scGateDB(version="v0.4")  ### NB: force update will mak
 models <- models.DB$human$generic  ## Pre-compiled list of models for human cell types
 print(models%>%names)
 
-#Edit CD4 and CD8 models to includes MAIT as contaminants
-models$CD4T <- scGate::gating_model(model = models$CD4T, level=4, negative=T, name="MAIT",
-                              signature=c("KLRB1","SLC4A10","NCR3","CD4-","CD8A-"))
-plot_tree(models$CD4T)
+#Edit CD4 and CD8 models to includes MAIT as contaminants?
+#models$CD4T <- scGate::gating_model(model = models$CD4T, level=4, negative=T, name="MAIT",
+#                              signature=c("KLRB1","SLC4A10","NCR3","CD4-","CD8A-"))
+#plot_tree(models$CD4T)
 
-models$CD8T <- scGate::gating_model(model = models$CD8T, level=4, negative=T, name="MAIT",
-                              signature=c("KLRB1","SLC4A10","NCR3","CD4-","CD8A-"))
-plot_tree(models$CD8T)
+#models$CD8T <- scGate::gating_model(model = models$CD8T, level=4, negative=T, name="MAIT",
+#                              signature=c("KLRB1","SLC4A10","NCR3","CD4-","CD8A-"))
+#plot_tree(models$CD8T)
 
 ```
 
@@ -206,7 +208,7 @@ pbmc_classifier <- readRDS("./aux/garnett_hsPBMC_classifier.RDS")  # load pre-tr
 
 
 
-# Garnet classification
+# Garnett classification
 ```{r}
 for(dset in dset.to.run){
   message(sprintf('-Running %s',dset))
@@ -245,7 +247,9 @@ gb = results.to.plot%>%group_by(method,metric)
 global.perf <- summarise(gb,value = mean(value,na.rm =T))%>%arrange(desc(value))
 
 #ordered.methods <- (summarise(gb,value = mean(value,na.rm =T))%>%subset(metric=="MCC")%>%arrange(desc(value)))$method
-ordered.methods <- c("scGate","SingleR","SCINA","Garnett")
+#ordered.methods <- c("scGate","SingleR","SCINA","Garnett")
+ordered.methods <- c("scGate","SingleR","SCINA")
+
 global.perf$method <- factor(global.perf$method, levels = ordered.methods)
 global.perf$metric <- factor(global.perf$metric, levels = c("PREC","REC","MCC"))
   
