--- a/scGate.benchmark.Rmd
+++ b/scGate.benchmark.Rmd
@@ -47,6 +47,7 @@ library(org.Hs.eg.db)
 
 Load datasets (you will need ~ 14gb of RAM)
 ```{r}
+# Load Jerby et.al, Yost et.al, Zilionis et.al, and Hao et.al datasets
 rds.file = "./aux/human_sets_benchmark.rds"
 if (!file.exists(rds.file)) {
   options(timeout=2000)
@@ -54,14 +55,22 @@ if (!file.exists(rds.file)) {
 }
 testing.datasets <- readRDS(rds.file) 
 
-#ground_truth_categories <- readRDS("./aux/SingleR_goldStandard.rds")  #Load an object containing stardard cell type annotations - to allow comparing different methods
+# Load Abdelaal 2019 pbmc data (also used in JiaruiDing2020)
+rds.file.abdelaal = "./aux/pbmc_abdelaal2019_processed.rds"
+if (!file.exists(rds.file)) {
+  options(timeout=2000)
+  download.file("https://figshare.com/ndownloader/files/33846359?private_link=c84ef361399e2f5148d8", rds.file.abdelaal)
+}
+abdelaal.pbmc.data <- readRDS(rds.file.abdelaal)
+testing.datasets <- c(testing.datasets, abdelaal.pbmc.data)
 
-ground_truth_categories <- readRDS("./aux/goldStandards.rds")  #Load an object containing stardard cell type annotations - to allow comparing different methods
 
+ground_truth_categories <- readRDS("./aux/goldStandards.rds")  #Load an object containing standarizedd cell type annotations - to allow comparing different methods
 figure.path <- "./plots/"
 dir.create(figure.path, showWarnings = F)
 
 ```
+
 
 
 Load default models from DB
@@ -108,7 +117,7 @@ Run scGate
 #names(testing.datasets)
 
 results <- data.frame()
-models <- models[names(models)!="Tcell.alphabeta"] #skip this model since there is no equivalent class in hpca for SingleR
+models <- models[!names(models)%>%c("Tcell.alphabeta","Plasma_cell")] #skip these models since there is no equivalent class in hpca for SingleR
 #results.bkp <- results
 ```
 
@@ -239,22 +248,44 @@ for(dset in dset.to.run){
   }  
 }
 ```
+Save results before summarization
+```{r}
+# save raw results per dataset (without summarizing Abdelaal's results)
+saveRDS(results,"aux/results.raw.rds")
+```
+
+Summarize Abdelaal results averaging pbmc1 and pbmc2 datasets
+```{r}
+results.no.abdelaal <- results%>%subset(!dataset %in% c("pbmc1.abdelaal","pbmc2.abdelaal"))
+
+# average performance of pbmc1 and pbmc2 abdelaal datasets
+results.abdelaal <- results%>%subset(dataset %in% c("pbmc1.abdelaal","pbmc2.abdelaal"))
+results.abdelaal.mean <- results.abdelaal%>%group_by(method,metric,model)%>%summarise(value = mean(value,drop.na =T))
+results.abdelaal.mean$dataset <- "Abdelaal"
+
+# merge abdelaal results to the other datasets
+results <- rbind(results.no.abdelaal, results.abdelaal.mean)
+```
+
 
 
 ```{r}
-results.to.plot <- results%>%subset(method!="Garnett.clust.ext" & metric!= "REC")
+results.to.plot <- results%>%subset(method!="Garnett.clust.ext" & metric!= "REC" & model!="PanBcell")
+#results.to.plot <- results%>%subset(method!="Garnett.clust.ext" & metric!= "REC" & model!="PanBcell" & dataset!="Abdelaal")
+
+results.to.plot$dataset <- factor(results.to.plot$dataset,levels = c("Hao","Jerby","Yost","Zilionis","Abdelaal"))
 gb = results.to.plot%>%group_by(method,metric)
 global.perf <- summarise(gb,value = mean(value,na.rm =T))%>%arrange(desc(value))
 
-#ordered.methods <- (summarise(gb,value = mean(value,na.rm =T))%>%subset(metric=="MCC")%>%arrange(desc(value)))$method
-#ordered.methods <- c("scGate","SingleR","SCINA","Garnett")
-ordered.methods <- c("scGate","SingleR","SCINA")
+ordered.methods <- (summarise(gb,value = mean(value,na.rm =T))%>%subset(metric=="MCC")%>%arrange(desc(value)))$method
+#ordered.methods <- c("scGate","SingleR","Garnett","SCINA")
+#ordered.methods <- c("scGate","SingleR","SCINA")
 
 global.perf$method <- factor(global.perf$method, levels = ordered.methods)
 global.perf$metric <- factor(global.perf$metric, levels = c("PREC","REC","MCC"))
   
-
-colors <- c("#56B4E9","#56E9BA","#E69F00","#E06D55")
+#colors <- c("#56B4E9","#56E9BA","#E69F00","#E06D55")
+colors <- c("#56B4E9","#E8E047","#E06D55","#E69F00")
 global.plt <- ggplot() +
   geom_bar(data=global.perf, aes(x=metric, y=value, fill=method), stat="identity", position="dodge", width = 0.75, alpha=0.3) +
 #  geom_jitter(data=global.perf, aes(x=metric, y=value, color = method)) + 
@@ -262,9 +293,7 @@ global.plt <- ggplot() +
   ylab("Global Performance")   + theme_bw() +
   theme(axis.text.x = element_text(angle = 60, vjust = 0.4, hjust=0.5)) 
 
-
-global.plt
-
+#global.plt
 ```
 
 
@@ -294,8 +323,8 @@ res.mcc$method <- factor(res.mcc$method, levels = ordered.methods)
 And visualize performance metrics in one plot
 ```{r}
 res.prec <- res.prec[!is.na(res.prec$value),]
-res.prec$model <- factor(res.prec$model, levels=c("Bcell","PanBcell","MoMacDC","Myeloid","NK","Tcell","CD4T","CD8T"))   #reorder in more intuitive way
-
+#res.prec$model <- factor(res.prec$model, levels=c("Bcell","PanBcell","MoMacDC","Myeloid","NK","Tcell","CD4T","CD8T"))   #reorder in more intuitive way
+res.prec$model <- factor(res.prec$model, levels=c("Bcell","MoMacDC","Myeloid","NK","Tcell","CD4T","CD8T"))   #reorder in more intuitive way
 smm.prec <- aggregate(res.prec$value, list(res.prec$method, res.prec$model), FUN=mean)
 colnames(smm.prec) <- c("method","model","value")
 
@@ -340,12 +369,12 @@ plt.prec <- plt.prec + theme(axis.title.x=element_blank(),
 b <- plt.prec / plt.mcc
 b
 
-ggsave(file.path(figure.path,"benchmark_20012022_scGate_portr.pdf"), plot=b, width=6, height=4)
+ggsave(file.path(figure.path,"benchmark_24012022_scGate_portr_withAbdelaal.pdf"), plot=b, width=6, height=4)
 
 ```
 
 ```{r}
-saveRDS(results,file = file.path(figure.path,"benchmark_19012022_scGate.rds"))  
+saveRDS(results,file = file.path(figure.path,"results_benchmark_24012022_scGate.rds"))  
 ```
 
 
